--- a/Sleepi/Sleepi.entitlements
+++ b/Sleepi/Sleepi.entitlements
@@ -8,5 +8,9 @@
 	<array>
 		<string>health-records</string>
 	</array>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.sleepi</string>
+	</array>
 </dict>
 </plist>
